# rsomics-plink-pca

./: Cargo.toml  README.md
benches/: bench.rs
src/: lib.rs  main.rs
tests/: compat.rs
tests/golden/: test.bed  test.bim  test.eigenval.golden  test.eigenvec.golden  test.fam
